Lots of improvement on the contact form.

--- a/less/methods.less
+++ b/less/methods.less
@@ -74,7 +74,7 @@
 }
 
 // transitions
-.transition(@property, @timing-function, @duration, @delay) {
+.transition(@property, @timing-function, @duration, @delay: 0s) {
   transition-property: @property; //width;
   transition-duration: @duration; //1s;
   transition-timing-function: @timing-function; //linear;
