--- a/style/style.css
+++ b/style/style.css
@@ -56,17 +56,10 @@ body {
   border-radius: 8px;
   border: 0px solid #000000;
   background-color: #bbbb88;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 25px;
+  padding: 25px;
+  margin: 25px auto;
   font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 36px;
+  font-size: 48px;
   font-weight: normal;
   color: #000000;
   min-height: 40 0px;
@@ -85,9 +78,7 @@ body {
   margin-top: 1px;
   margin-bottom: 1px;
   font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 90px;
-  font-weight: bold;
-  color: #000000;
+  font-size: 120px;
 }
 #navigation {
   width: 1280px;
@@ -96,10 +87,6 @@ body {
   border-radius: 5px;
   border: 0px solid #000000;
   background-color: #bbbb88;
-  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
-  font-size: 30px;
-  font-weight: normal;
-  color: #000000;
   float: right;
   margin-bottom: 5px;
 }
@@ -126,8 +113,8 @@ body {
   margin-top: 3px;
   margin-bottom: 3px;
 }
-#navigation .nav-item {
-  width: 2%;
+.nav-item {
+  width: 192px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -157,9 +144,13 @@ body {
   -o-transition-duration: 0.2s;
   -o-transition-timing-function: ease;
   -o-transition-delay: 0s;
+  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-size: 43px;
+  font-weight: normal;
+  color: #000000;
 }
-#navigation .nav-item:hover {
-  width: 2%;
+.nav-item:hover {
+  width: 192px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -170,8 +161,8 @@ body {
   color: #fff;
   cursor: default;
 }
-#navigation .nav-item:active {
-  width: 2%;
+.nav-item:active {
+  width: 192px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -182,8 +173,8 @@ body {
   color: #fff;
   cursor: default;
 }
-#navigation #active-nav-item {
-  width: 2%;
+#active-nav-item {
+  width: 192px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
@@ -260,7 +251,7 @@ body {
 }
 #latest h1 {
   font-weight: bold;
-  font-size: 43.199999999999996px;
+  font-size: 57.599999999999994px;
   margin: 0px;
   padding: 0px;
   padding-left: 10px;
@@ -470,7 +461,7 @@ body {
   margin-bottom: 15px;
 }
 #hey-there {
-  font-size: 90px;
+  font-size: 120px;
   font-weight: bold;
 }
 .clearer {
