--- a/less/style.less
+++ b/less/style.less
@@ -203,15 +203,15 @@ body {
 
 #social-links {
     width: @form-item-width;
+    margin: 25px;
     float: left;
     
-    margin: 20px;
     p {
-        font-weight: bold;
-        padding: 0px;
         margin: 5px;
-        text-align: center;
-    }    
+        padding: 0px;
+        font-weight: bold;
+        text-align: center;    
+    }   
 }
 
 @social-icon-size: 125px;
@@ -220,25 +220,25 @@ body {
     height: @social-icon-size;
     .rounded-container(@social-icon-size, 5px, 1px, @current-background-color + 0.5, @current-background-color);
     .transition(all, ease, 0.2s);
+    margin: 1%;
     float: left;
-    margin: 50px;
-    margin-top: 0px;
+    display: inline;
     text-align: center;
     line-height: 10px;
 }
 
 .social-icon:hover {
     background-color: @current-background-color + 0.5 * @shade-darker;
-    border: 1px solid #FFF;
+    
 }
 
 .social-icon:active {
     background-color: @current-background-color + @shade-darker;
-    border: 1px solid #FFF;
+    
 }
 
 #social-icon-container {
-    // empty
+    margin-left: 20px;
 }
 
 #copyright {
@@ -249,8 +249,7 @@ body {
 
 // Miscellaneous
 #hey-there {
-    font-size: @default-font-size * 2.5;
-    font-weight: bold;
+    font-size: @default-font-size * 2.5;    
 }
 
 .clearer {
