--- a/style/style.css
+++ b/style/style.css
@@ -16,12 +16,6 @@
   font-weight: normal;
   src: local('Century Gothic'), url(/fonts/century-gothic.woff) format('woff');
 }
-@font-face {
-  font-family: 'League Gothic';
-  font-style: normal;
-  font-weight: bold;
-  src: local('League Gothic'), url(/fonts/league-gothic.woff) format('woff');
-}
 .separator {
   margin-left: 0px;
   margin-right: 0px;
@@ -58,7 +52,7 @@ body {
   background-color: #bbbb88;
   padding: 25px;
   margin: 25px auto;
-  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
   font-size: 48px;
   font-weight: normal;
   color: #000000;
@@ -77,7 +71,7 @@ body {
   padding-bottom: 1px;
   margin-top: 1px;
   margin-bottom: 1px;
-  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
   font-size: 120px;
 }
 #navigation {
@@ -143,7 +137,7 @@ body {
   -o-transition-duration: 0.2s;
   -o-transition-timing-function: ease;
   -o-transition-delay: 0s;
-  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
   font-size: 43px;
   font-weight: normal;
   color: #000000;
@@ -260,7 +254,7 @@ body {
   width: 576px;
   height: auto;
   margin: 20px;
-  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
   float: left;
 }
 #contact-form .form-item {
@@ -299,7 +293,7 @@ body {
   border: 1px solid #bbbb88;
   background-color: #ffffff;
   padding: 5px;
-  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
   font-size: 24px;
 }
 #contact-form #submit-button {
@@ -405,8 +399,12 @@ input#human-check {
 #social-icon-container {
   margin-left: 20px;
 }
+.loading {
+  display: none;
+  background: #bbbb88, url("/images/loading2.gif"), 50% 50%, no-repeat;
+}
 #copyright {
-  font-family: 'News Cycle', 'League Gothic', 'Opera Sans', 'Century Gothic', sans-serif;
+  font-family: 'News Cycle', 'Opera Sans', 'Century Gothic', sans-serif;
   font-size: 12px;
   font-weight: normal;
   color: #000000;
