Get rrid of captcha code. Also, add a bit of validation and refactor a bit.

--- a/less/style.less
+++ b/less/style.less
@@ -332,3 +332,7 @@ input#captcha-code {
     color: @current-background-color + 1.00 * @shade-brighter;
     border: solid 1px @current-background-color + @shade-brighter;
 }
+
+#email-warning, #subject-warning {
+    color: red;
+}
